update login configs

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="col-md-12">
-  <div class="card card-container">
+  <div class="container">
     <form
       *ngIf="!isLoggedIn"
       name="form"
@@ -33,7 +33,7 @@
           name="password"
           [(ngModel)]="form.password"
           required
-          minlength="6"
+          minlength="4"
           #password="ngModel"
         />
         <div
