add user to storage

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -64,7 +64,7 @@
     </form>
 
     <div class="alert alert-success" *ngIf="isLoggedIn">
-      Logged in as {{ user }}.
+      Logged in as {{ user.email }} {{ user.roles }}.
     </div>
   </div>
 </div>
