--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -6,8 +6,8 @@
   </header>
   <p>
     <strong>Token:</strong>
-    {{ currentUser.accessToken.substring(0, 20) }} ...
-    {{ currentUser.accessToken.substr(currentUser.accessToken.length - 20) }}
+    {{ currentToken.substring(0, 20) }} ...
+    {{ currentToken.substr(currentToken.length - 20) }}
   </p>
   <p>
     <strong>Email:</strong>
