--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,15 +6,19 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-xl-3 col-lg-2">
-        <div class="header__logo">
-          <a href="#"><img src="assets/img/logo.png" alt=""></a>
+        <div class="header__logo" style="padding-top: 31px;">
+          <a style="    COLOR: black;
+    font-weight: bolder;
+    font-size: 22px;
+    letter-spacing: 9px;
+    margin-top: 2px;" href="#"><span>KTEBNA.TN</span></a>
         </div>
       </div>
       <div class="col-xl-6 col-lg-7">
         <nav class="header__menu">
           <ul>
             <li class="active">
-              <a href="/home" class="nav-link" routerLink="home">Home </a>
+              <a href="/home" class="nav-link">Home </a>
             </li>
             <li *ngIf="showAdminBoard">
               <a href="/admin" class="nav-link" routerLink="admin">Dashboard </a>
@@ -71,7 +75,7 @@
       <div class="col-lg-4 col-md-6 col-sm-7">
         <div class="footer__about">
           <div class="footer__logo">
-            <a href="#"><img src="assets/img/logo.png" alt=""></a>
+            <a href="#"><img style="max-width: 120px" src="assets/img/logo.png" alt=""></a>
           </div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
             cilisis.</p>
