--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -1,7 +1,8 @@
 <div class="container" *ngIf="currentUser; else loggedOut">
-  <header class="jumbotron">
+  <header class="jumbotron" style="    padding: 25px !important;
+    padding-bottom: 5px !important;">
     <h3>
-      <strong>{{ currentUser.username }}</strong> Profile
+      Welcome back <strong>{{ currentUser.name }}</strong> !
     </h3>
   </header>
   <p>
