--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -5,21 +5,7 @@
       Welcome back <strong>{{ currentUser.name }}</strong> !
     </h3>
   </header>
-  <p>
-    <strong>Token:</strong>
-    {{ currentToken.substring(0, 20) }} ...
-    {{ currentToken.substr(currentToken.length - 20) }}
-  </p>
-  <p>
-    <strong>Email:</strong>
-    {{ currentUser.email }}
-  </p>
-  <strong>Roles:</strong>
-  <ul>
-    <li *ngFor="let role of currentUser.roles">
-      {{ role }}
-    </li>
-  </ul>
+  <app-profile-details></app-profile-details>
 </div>
 
 <ng-template #loggedOut>
