--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -20,10 +20,17 @@
             <li class="active">
               <a href="/home" class="nav-link">Home </a>
             </li>
+            <li>
+              <a href="/auteur" class="nav-link">Author </a>
+            </li>
+            <li>
+              <a href="/book/home" class="nav-link">Book </a>
+            </li>
             <li *ngIf="showAdminBoard">
               <a href="/admin" class="nav-link" routerLink="admin">Dashboard </a>
             </li>
           </ul>
+
         </nav>
       </div>
       <div class="col-lg-3">
